Bootstrap db in auth microservice
added endpoints to list and create users
